--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,7 @@ steps:
     php -version
   displayName: 'Use PHP version $(phpVersion)'
 
-- script: composer install --no-interaction --prefer-dist
-  displayName: 'composer install'
+
+- script: 
+    git pull master
+  displayName: Pull update
